# rules_swift_package_manager

examples/injectionnext_example/: BUILD.bazel  MODULE.bazel
